# photon

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE
examples/: 01-basics.c  02-triangle.c
include/: photon.h
src/: core.c  event.c  file.c  graphics.c  init.c  internal.c  internal.h  lifetime.c  metal.c  render.c  vulkan.c  window.c
